--- a/module/ProjectTimer/view/project-timer/project-timer/index.phtml
+++ b/module/ProjectTimer/view/project-timer/project-timer/index.phtml
@@ -14,7 +14,7 @@
      <th>total hours</th>
      <th>start/stop</th>
  </tr>
- <?php foreach ($projectTable as $projecttimer) : ?>
+ <?php foreach ($projecttimerTable as $projecttimer) : ?>
  <tr>
      <td><?php echo $this->escapeHtml($projecttimer->start_time);?></td>
      <td><?php echo $this->escapeHtml($projecttimer->start_time);?></td>
