--- a/module/ProjectTimer/view/project-timer/project-timer/index.phtml
+++ b/module/ProjectTimer/view/project-timer/project-timer/index.phtml
@@ -29,5 +29,5 @@
  <?php endforeach; ?>
 </table>
  <?php foreach($projecttable as $aproject): ?>
-<?php echo $aproject->projectname;?>
+<?php print_r( $aproject); ?>
 <?php endforeach; ?>
