--- a/module/ProjectTimer/view/project-timer/project-timer/index.phtml
+++ b/module/ProjectTimer/view/project-timer/project-timer/index.phtml
@@ -5,7 +5,7 @@
  ?>
  <h1><?php echo $this->escapeHtml($title); ?></h1>
  <p>
-     <a href="<?php echo $this->url('projecttimer', array('action'=>'add'));?>">Add new projecttimer</a>
+     <a href="<?php echo $this->url('projecttimer', array('action'=>'add'));?>">Add a new project</a>
  </p>
 
  <table class="table">
@@ -14,20 +14,19 @@
      <th>total hours</th>
      <th>start/stop</th>
  </tr>
- <?php foreach ($projecttimertable as $projecttimer) : ?>
+ <?php foreach ($projecthashkey as $pid=>$projectname) : ?>
  <tr>
-     <td><?php echo $this->escapeHtml($projecttimer->start_time);?></td>
-     <td><?php echo $this->escapeHtml($projecttimer->start_time);?></td>
-     <td><?php echo $this->escapeHtml($projecttimer->stop_time);?></td>
+     <td><?php echo $this->escapeHtml($projecthashkey[$pid]);?></td>
+     <td><?php echo $this->escapeHtml($timesummary[$pid]);?></td>
      <td>
+        <?php if ( $projectstatus[$pid]==1 ): ?>
          <a href="<?php echo $this->url('projecttimer',
-             array('action'=>'edit', 'id' => $projecttimer->project_id));?>">Edit</a>
+             array('action'=>'stop', 'id' => $projecttimer->project_id));?>">Stop</a>
+        <?php else: ?>
          <a href="<?php echo $this->url('projecttimer',
-             array('action'=>'delete', 'id' => $projecttimer->project_id));?>">Delete</a>
+             array('action'=>'start', 'id' => $projecttimer->project_id));?>">Start</a>
+        <?php endif ?>
      </td>
  </tr>
  <?php endforeach; ?>
 </table>
- <?php foreach($projecttable as $aproject): ?>
-<?php print_r( $aproject); ?>
-<?php endforeach; ?>
