--- a/module/ProjectTimer/view/project-timer/project-timer/edit.phtml
+++ b/module/ProjectTimer/view/project-timer/project-timer/edit.phtml
@@ -17,7 +17,7 @@
  $form->prepare();
 
  echo $this->form()->openTag($form);
- echo $this->formHidden($form->get('id'));
+ echo $this->formRow($form->get('id'));
  echo $this->formRow($form->get('projectname'));
  echo $this->formSubmit($form->get('submit'));
  echo $this->form()->closeTag();
